Primeira versão do endpoints do recurso carro
