# src/main/java/br/com/grupomult/api/controllers/CarrosApi.java
@@ -1,0 +1,101 @@
+/**
+ * NOTE: This class is auto generated by the swagger code generator program (2.3.1).
+ * https://github.com/swagger-api/swagger-codegen
+ * Do not edit the class manually.
+ */
+package br.com.grupomult.api.controllers;
+
+import com.fasterxml.jackson.databind.ObjectMapper;
+
+import br.com.grupomult.entities.ResponseGetCarros;
+import br.com.grupomult.entities.ResponseGetCarrosById;
+import io.swagger.annotations.*;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
+import org.springframework.validation.annotation.Validated;
+import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestHeader;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RequestMethod;
+import org.springframework.web.bind.annotation.RequestParam;
+import org.springframework.web.bind.annotation.RequestPart;
+import org.springframework.web.multipart.MultipartFile;
+
+import javax.servlet.http.HttpServletRequest;
+import javax.validation.Valid;
+import javax.validation.constraints.*;
+import java.io.IOException;
+import java.util.List;
+import java.util.Optional;
+@javax.annotation.Generated(value = "io.swagger.codegen.languages.SpringCodegen", date = "2018-12-22T15:37:49.925-02:00")
+
+@Api(value = "carros", description = "the carros API")
+public interface CarrosApi {
+
+    Logger log = LoggerFactory.getLogger(CarrosApi.class);
+
+    default Optional<ObjectMapper> getObjectMapper() {
+        return Optional.empty();
+    }
+
+    default Optional<HttpServletRequest> getRequest() {
+        return Optional.empty();
+    }
+
+    default Optional<String> getAcceptHeader() {
+        return getRequest().map(r -> r.getHeader("Accept"));
+    }
+
+    @ApiOperation(value = "Lista todos os carros cadastrados", nickname = "listAllCarro", notes = "Lista todos os detalhes dos carros cadastrados.", response = ResponseGetCarros.class, tags={ "Carros", })
+    @ApiResponses(value = { 
+        @ApiResponse(code = 200, message = "Representação dos dados de todos os animais cadastrados.", response = ResponseGetCarros.class),
+        @ApiResponse(code = 204, message = "Nenhum carro encontrado"),
+        @ApiResponse(code = 500, message = "Erro interno") })
+    @RequestMapping(value = "/carros",
+        produces = { "application/json" }, 
+        method = RequestMethod.GET)
+    default ResponseEntity<ResponseGetCarros> listAllCarro() {
+        if(getObjectMapper().isPresent() && getAcceptHeader().isPresent()) {
+            if (getAcceptHeader().get().contains("application/json")) {
+                try {
+                    return new ResponseEntity<>(getObjectMapper().get().readValue("{  \"carros\" : [ {    \"codigo\" : \"codigo\",    \"tipoCarro\" : \"tipoCarro\",    \"dataAtualizacao\" : \"dataAtualizacao\",    \"dataCriacao\" : \"dataCriacao\",    \"descricao\" : \"descricao\"  }, {    \"codigo\" : \"codigo\",    \"tipoCarro\" : \"tipoCarro\",    \"dataAtualizacao\" : \"dataAtualizacao\",    \"dataCriacao\" : \"dataCriacao\",    \"descricao\" : \"descricao\"  } ]}", ResponseGetCarros.class), HttpStatus.NOT_IMPLEMENTED);
+                } catch (IOException e) {
+                    log.error("Couldn't serialize response for content type application/json", e);
+                    return new ResponseEntity<>(HttpStatus.INTERNAL_SERVER_ERROR);
+                }
+            }
+        } else {
+            log.warn("ObjectMapper or HttpServletRequest not configured in default CarrosApi interface so no example is generated");
+        }
+        return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
+    }
+
+
+    @ApiOperation(value = "Lista um carro específico", nickname = "listCarro", notes = "Lista os detalhes de um carro específico de acordo com o ID.", response = ResponseGetCarrosById.class, tags={ "Carros", })
+    @ApiResponses(value = { 
+        @ApiResponse(code = 200, message = "Detalhe do carro encontrado", response = ResponseGetCarrosById.class),
+        @ApiResponse(code = 404, message = "Nenhum carro encontrado correspondente ao ID informado"),
+        @ApiResponse(code = 500, message = "Erro interno") })
+    @RequestMapping(value = "/carros/{id}",
+        produces = { "application/json" }, 
+        method = RequestMethod.GET)
+    default ResponseEntity<ResponseGetCarrosById> listCarro(@ApiParam(value = "",required=true) @PathVariable("id") Integer id) {
+        if(getObjectMapper().isPresent() && getAcceptHeader().isPresent()) {
+            if (getAcceptHeader().get().contains("application/json")) {
+                try {
+                    return new ResponseEntity<>(getObjectMapper().get().readValue("{  \"carro\" : {    \"codigo\" : \"codigo\",    \"tipoCarro\" : \"tipoCarro\",    \"dataAtualizacao\" : \"dataAtualizacao\",    \"dataCriacao\" : \"dataCriacao\",    \"descricao\" : \"descricao\"  }}", ResponseGetCarrosById.class), HttpStatus.NOT_IMPLEMENTED);
+                } catch (IOException e) {
+                    log.error("Couldn't serialize response for content type application/json", e);
+                    return new ResponseEntity<>(HttpStatus.INTERNAL_SERVER_ERROR);
+                }
+            }
+        } else {
+            log.warn("ObjectMapper or HttpServletRequest not configured in default CarrosApi interface so no example is generated");
+        }
+        return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
+    }
+
+}
