# src/main/java/br/com/grupomult/flows/carros/ListCarrosByIdValidate.java
@@ -1,4 +1,4 @@
-package br.com.grupomult.flows.animal;
+package br.com.grupomult.flows.carros;
 
 import static br.com.grupomult.constants.MessageConstants.ERROR_GET_ANIMALS_BY_ID_INVALID_ID;
 
@@ -7,15 +7,15 @@ import java.util.Optional;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 
-import br.com.grupomult.api.animal.models.ResponseGetAnimalsById;
+import br.com.grupomult.entities.ResponseGetCarrosById;
 import br.com.grupomult.exceptions.HttpBadRequestException;
 
-public class ListAnimalsByIdValidate {
+public class ListCarrosByIdValidate {
 
 	@Autowired
-	private ListAnimalsByIdLoad load;
+	private ListCarrosByIdLoad load;
 
-	public ResponseEntity<ResponseGetAnimalsById> execute(Integer id) {
+	public ResponseEntity<ResponseGetCarrosById> execute(Integer id) {
 		if (!Optional.ofNullable(id).isPresent() || id < 0) {
 			throw new HttpBadRequestException(ERROR_GET_ANIMALS_BY_ID_INVALID_ID);
 		}
