# src/main/resources/swagger/api-animal.yaml
@@ -19,46 +19,6 @@ tags:
     description: "Operações para o recurso Carro"
 
 paths:
-
-  /animals:
-    get:
-      summary: Lista todos os animais cadastrados
-      description: Lista todos os detalhes dos animais cadastrados.
-      operationId: list
-      produces:
-        - application/json
-      responses:
-        200:
-          description: Representação dos dados de todos os animais cadastrados.
-          schema:
-            $ref: '#/definitions/ResponseGetAnimals'
-        204:
-          description: Nenhum animal encontrado
-        500:
-          description: Erro interno
-
-  /animals/{id}:
-    get:
-      summary: Lista um animal específico
-      description: Lista os detalhes de um animal específico de acordo com o ID.
-      operationId: detail
-      produces:
-        - application/json
-      parameters:
-        - name: id
-          in: path
-          type: integer
-          required: true
-      responses:
-        200:
-          description: Detalhe do animal encontrado
-          schema:
-            $ref: '#/definitions/ResponseGetAnimalsById'
-        404:
-          description: Nenhum animal encontrado correspondente ao ID informado
-        500:
-          description: Erro interno
-
   /carros:
     get:
       tags:
@@ -103,72 +63,19 @@ paths:
           description: Erro interno
 
 definitions:
-  ResponseGetAnimals:
-    type: object
-    properties:
-      animais:
-        type: array
-        items:
-          $ref: '#/definitions/Animal'
-
-  ResponseGetAnimalsById:
-    type: object
-    properties:
-      animal:
-        $ref: '#/definitions/Animal'
-
   ResponseGetCarros:
     type: object
     properties:
       carros:
         type: array
         items:
-          $ref: '#/definitions/Carro'
+          $ref: '#/definitions/CarroModel'
 
   ResponseGetCarrosById:
     type: object
     properties:
       carro:
-        $ref: '#/definitions/Carro'
-
-  Animal:
-    type: object
-    required:
-      - name
-      - dob
-      - ageInDays
-      - ageInMonths
-      - ageInYears
-      - species
-    properties:
-      name:
-        type: string
-      dob:
-        description: Data de nascimento
-        type: string
-      ageInDays:
-        description: Idade em dias
-        type: integer
-        format: int64
-        minimum: 1
-        maximum: 36135
-      ageInMonths:
-        description: Idade em meses
-        type: integer
-        format: int64
-        minimum: 0
-        maximum: 1188
-      ageInYears:
-        description: Idade em anos
-        type: integer
-        format: int64
-        minimum: 0
-        maximum: 99
-      species:
-        type: string
-        enum:
-          - FELINE
-          - CANINE
+        $ref: '#/definitions/CarroModel'
 
   TipoCarro:
     type: "object"
@@ -209,3 +116,21 @@ definitions:
         format: "date-time"
       tipoCarro:
         $ref: "#/definitions/TipoCarro"
+  CarroModel:
+    type: "object"
+    required:
+      - "codigo"
+      - "descricao"
+      - "dataCriacao"
+      - "dataAtualizacao"
+    properties:
+      codigo:
+        type: "string"
+      descricao:
+        type: "string"
+      dataCriacao:
+        type: "string"
+      dataAtualizacao:
+        type: "string"
+      tipoCarro:
+        type: "string"
